--- a/config
+++ b/config
@@ -28,7 +28,7 @@ exec --no-startup-id dex-autostart --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i /home/jayson/workspace/fedora-i3/wall.png
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -221,6 +221,9 @@ bindsym $mod+Shift+F exec flameshot gui
 
 ## Wallpaper
 exec_always --no-startup-id feh --bg-scale --zoom fill /home/jayson/workspace/fedora-i3/wall.png
+
+## Browser
+bindsym $mod+B exec brave-browser
 
 ## Theme
 
